# hack-n-snack

./: .gitignore  CLAUDE.md  README.md
lead_lag_strategy/: README.md  __init__.py  backtest.py  config.py  live.py  pyproject.toml  requirements.txt
lead_lag_strategy/data/: fetcher.py
lead_lag_strategy/evaluation/: metrics.py
lead_lag_strategy/model/: pca.py  portfolio.py  signal.py
lead_lag_strategy_v2/: README.md  common.py  pyproject.toml  realtime_run.py  verify_logic.py
