[project]
name = "lead-lag-strategy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pyarrow>=14.0.0",
    "statsmodels>=0.14.0",
    "pandas-datareader>=0.10.0",
    "seaborn>=0.12.0",
]
