[project]
name = "lead-lag-strategy-v2"
version = "0.1.0"
description = "Lead-lag strategies for Japanese and U.S. sectors using subspace regularization PCA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.4",
    "matplotlib>=3.11.0",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
live = [
    "yfinance>=1.5.1",
]
